Перенес всю бизнес логику в сервис, в контролерах только работа с БД. Убрал все запросы к БД имеющие N + 1 обработку, т.е. обрабатываю сразу 1 запросом всё, а не кажды раз обращаюсь к БД. Убрал в FilmRowMapper обращение к БД, Поправил тесты, убрал тесты на Film так как они не нужны.