@@ -6,21 +6,15 @@ import org.springframework.stereotype.Component;
 import ru.yandex.practicum.filmorate.dto.request.FilmRequest;
 import ru.yandex.practicum.filmorate.dto.response.FilmResponse;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.Genre;
-import ru.yandex.practicum.filmorate.model.Mpa;
 import ru.yandex.practicum.filmorate.storage.genre.GenreStorage;
 import ru.yandex.practicum.filmorate.storage.mpa.MpaStorage;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
 @RequiredArgsConstructor
-public class FilmMappers {
+public class FilmRowMapper {
     private final MpaStorage mpaStorage;
     private final GenreStorage genreStorage;
 
@@ -32,7 +26,7 @@ public class FilmMappers {
         film.setReleaseDate(request.getReleaseDate());
         film.setDuration(request.getDuration());
         film.setMpa(request.getMpa());
-        film.setGenreIds(request.getGenreIds() != null ? request.getGenreIds() : Set.of());
+        film.setGenres(request.getGenres() != null ? request.getGenres() : Set.of());
 
         return film;
     }
@@ -45,17 +39,8 @@ public class FilmMappers {
         response.setReleaseDate(film.getReleaseDate());
         response.setDuration(film.getDuration());
         response.setLikes(film.getLikes());
-
-        Mpa mpa = film.getMpa() != null ?
-                mpaStorage.findById(film.getMpa().getId()).orElse(null) : null;
-        response.setMpa(mpa);
-
-        List<Genre> genres = film.getGenreIds().stream()
-                .map(genreId -> genreStorage.findById(genreId).orElse(null))
-                .filter(Objects::nonNull)
-                .sorted(Comparator.comparing(Genre::getId))
-                .collect(Collectors.toList());
-        response.setGenres(genres);
+        response.setMpa(film.getMpa());
+        response.setGenres(film.getGenres().stream().toList());
 
         return response;
     }
